--- a/epp-taller.Rmd
+++ b/epp-taller.Rmd
@@ -1,11 +1,19 @@
 ---
-title: "Taller de Ciencia de datos"
+title: "Clínica de Ciencia de datos"
 description: "Especialización en Políticas Públicas"
+output:
+  distill::distill_article:
+    toc: true
+    toc_depth: 2
+    toc-title: "test"
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+
+# Sobre el curso
 
 Es un curso intensivo que se llevará a cabo en formato presencial durante los siguientes días y horarios:  
 - Jueves 07/04 de 15 a 21hs.  
@@ -13,12 +21,17 @@ Es un curso intensivo que se llevará a cabo en formato presencial durante los s
 - Sábado 09/04 de 9 a 18hs.  
 Cada encuentro tendrá una parte teórica donde los docentes presentarán los contenidos necesarios y donde diferentes invitados compartirán sus experiencias en el uso de datos en el sector público, y una parte práctica donde los alumnos trabajarán con las técnicas contempladas en el temario.
 
+[**PROGRAMA**](programas/2022-EPP-CLINICA_DE_DATOS.pdf)
 
-------------------------------------------------------------------------
 
-## Clases teórico-prácticas
+&nbsp;
+&nbsp;
 
-### Día 1
+# Estructura del curso
+
+## Día 1: jueves 7 de abril
+
+### Clases teórico-prácticas
 
 #### Práctica 1
 Introducción a R y RStudio, instalación. Abrir el entorno y cargar un dataset.  
@@ -34,9 +47,17 @@ Análisis exploratorio de datos: Data wrangling con tidyverse.
 Manuales de clase:  
 [Big data urbana: manipulación de datos](https://angiescetta.github.io/big-data-urbana/manipulaci%C3%B3n-de-datos.html)
 
----
 
-### Día 2
+### Desafío
+Link
+
+&nbsp;
+&nbsp;
+
+
+## Día 2: viernes 8 de abril
+
+### Clases teórico-prácticas
 
 #### Práctica 3
 Visualización de datos: Introducción a ggplot.
@@ -53,9 +74,16 @@ Manuales de clase:
 [Rpubs: Introducción a lubridate](https://rpubs.com/paulavidela/fechas)
 
 
----
+### Desafío
+Link
 
-### Día 3
+
+&nbsp;
+&nbsp;
+
+## Día 3: sábado 9 de abril
+
+### Clases teórico-prácticas
 
 #### Práctica 5
 Información geográfica: introducción a sf.  
@@ -70,3 +98,11 @@ Información geográfica: geoprocesos con sf.
 
 Manuales de clase:  
 [Rpubs: Geoprocesamientos](https://rpubs.com/paulavidela/funciones-sf)
+
+
+### Desafío
+Link
+
+
+
+
