--- a/epp-taller.Rmd
+++ b/epp-taller.Rmd
@@ -21,6 +21,7 @@ Es un curso intensivo que se llevará a cabo en formato presencial durante los s
 - Sábado 09/04 de 9 a 18hs.  
 Cada encuentro tendrá una parte teórica donde los docentes presentarán los contenidos necesarios y donde diferentes invitados compartirán sus experiencias en el uso de datos en el sector público, y una parte práctica donde los alumnos trabajarán con las técnicas contempladas en el temario.
 
+
 [**PROGRAMA**](programas/2022-EPP-CLINICA_DE_DATOS.pdf)
 
 
@@ -30,6 +31,15 @@ Cada encuentro tendrá una parte teórica donde los docentes presentarán los co
 # Estructura del curso
 
 ## Día 1: jueves 7 de abril
+
+=======
+&nbsp;
+&nbsp;
+
+# Estructura del curso
+
+## Día 1: jueves 7 de abril
+
 
 ### Clases teórico-prácticas
 
