Actualizacion de pagina inicial 14-02

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,5 @@
 ---
-title: "Cursos 2022"
-
+title: "Sobre los cursos de Ciencia de Datos"
 site: distill::distill_website
 ---
 
@@ -23,11 +22,7 @@ knitr::include_graphics("images/city-science.jpg")
 ```
 
 
-## Programa 2022
+Cursos de Ciencia de Datos en la Maestría de Economía Urbana, la Maestría en Políticas Públicas, la Especialización en Políticas Públicas, la Diplomatura en Ciudades y la Formación Ejecutiva en Políticas Públicas.  
+**Universidad Torcuato Di Tella (UTDT) - Escuela de Gobierno**
 
-Cursos de Ciencia de Datos en la Maestría de Economía Urbana, la Maestría en Políticas Públicas, la Especialización en Políticas Públicas, la Diplomatura en Ciudades y la Formación Ejecutiva en Políticas Públicas. 
 
-
-## Modalidad de las clases
-
-La dinámica de las clases es teórico-práctica
