--- a/epp-taller.Rmd
+++ b/epp-taller.Rmd
@@ -24,7 +24,7 @@ Cada encuentro tendrá una parte teórica donde los docentes presentarán los co
 &nbsp;
 &nbsp;
 
-[**PROGRAMA**](programas/2022-EPP-CLINICA_DE_DATOS.pdf)
+[**PROGRAMA**](https://github.com/paulavidela/utdt_cienciadedatos/raw/main/programas/2022-EPP-CLINICA_DE_DATOS.pdf)
 
 
 &nbsp;
@@ -52,7 +52,7 @@ Manuales de clase:
 
 
 ### Desafío
-Link
+[Consignas](epp-clinica/desafio1_template.html) - [Descargar Rmd](epp-clinica/desafio1_template.Rmd) -
 
 &nbsp;
 &nbsp;
