--- a/about.Rmd
+++ b/about.Rmd
@@ -10,7 +10,9 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # **Ángeles Scetta**
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Arquitecta, Universidad de Buenos Aires (UBA). Realizó la Maestría en Economía Urbana con orientación en Ciencia de Datos en la Universidad Torcuato Di Tella (UTDT).
+Actualmente, se desempeña como Directora General de Ciencias de la Información en el Gobierno de la Ciudad de Buenos Aires, donde lidera los equipos encargados de Análisis de Información Geoespacial, Ciencia de Datos, y Análisis y Visualización de Datos.
+Asimismo, participa en los proyectos de investigación del Laboratorio de Urbanismo y Arquitectura de la Universidad Nacional de San Martín (UNSAM) y dicta clases de Ciencia de Datos aplicada a Estudios Urbanos en las Maestrías de la Escuela de Gobierno de la UTDT y en el Posgrado de Big Data e Inteligencia Territorial de la Facultad Latinoamericana de Ciencias Sociales (FLACSO).
 
 
 
@@ -18,6 +20,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 # **Paula Videla**
 
+Arquitecta, Universidad de Buenos Aires (UBA). Magíster en Economía Urbana, Universidad Torcuato Di Tella (UTDT). Posgrado en Big Data e Inteligencia Territorial, Facultad Latinoamericana de Ciencias Sociales (FLACSO).
+Actualmente, se desempeña como consultora en Ciencia de Datos para el Banco Interamericano de Desarrollo (BID) siendo parte del equipo de Civic Data del sector de Desarrollo Urbano y Vivienda (HUD), donde participa en proyectos de big data e inteligencia artificial para políticas públicas. Ex-directora de Análisis y Coordinación Digital de la Municipalidad de San Isidro.
+Participó en proyectos de investigación para el Centro de Investigación de Políticas Urbanas y Vivienda (CIPUV) de la Universidad Torcuato Di Tella (UTDT). Además colabora en los cursos de Ciencia de Datos aplicada a Estudios Urbanos en las Maestrías de la Escuela de Gobierno de la Universidad Torcuato Di Tella. 
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
